# vex

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  README.md  index.html  installation.html  introduction.html  print.html  quick-start-guide.html  searchindex.js  searchindex.json
.github/workflows/: ci.yml  docs.yml  woke.yml
docs/: book.toml
docs/src/: 404.md  SUMMARY.md  installation.md  introduction.md  quick-start-guide.md
docs/src/explanations/: README.md
docs/src/how-to-guides/: README.md  how-to-change-language.md  how-to-ignore-warnings.md  how-to-import-vexes-with-git.md  how-to-make-a-vex-lenient.md  how-to-override-a-files-language.md  how-to-search-child-nodes.md  how-to-search-parent-nodes.md  how-to-setup-vex.md  how-to-support-lint-levels.md
docs/src/misc/: contributors.md
docs/src/reference-materials/: README.md  globs.md
docs/src/tutorials/: README.md  lets-write-a-vex.md
docs/theme/css/: style.css
explanations/: index.html
how-to-guides/: how-to-ignore-warnings.html  how-to-import-vexes-with-git.html  how-to-override-a-files-language.html  how-to-search-child-nodes.html  how-to-search-parent-nodes.html  how-to-setup-vex.html  how-to-support-lint-levels.html  index.html
html/: 404.html  index.html  installation.html  introduction.html  print.html  quick-start-guide.html  searchindex.js  searchindex.json
html/explanations/: index.html
html/how-to-guides/: how-to-ignore-warnings.html  how-to-override-a-files-language.html  index.html
html/misc/: contributors.html
html/reference-materials/: globs.html  index.html
html/tutorials/: index.html
misc/: contributors.html
reference-materials/: globs.html  index.html
snap/: snapcraft.yaml
src/: active_lints.rs  arena_map.rs  associations.rs  check_id.rs  cli.rs  context.rs  dump.rs  error.rs  id.rs  ignore_markers.rs  ignores.rs  irritation.rs  language.rs  logger.rs  main.rs  manifest.rs  parse.rs  plural.rs  profile.rs  query.rs  result.rs  run_data.rs  scan.rs  scriptlets.rs  source_file.rs  source_path.rs  suggestion.rs  supported_language.rs  test.rs  trigger.rs  verbosity.rs  vex.rs  vex_id.rs  vex_map.rs  vex_store.rs  vexes.rs  vextest.rs  warning_filter.rs
src/scriptlets/: action.rs  app_object.rs  event.rs  extra_data.rs  handler_module.rs  handlers.rs  intents.rs  lsp.rs  main_annotation.rs  node.rs  observers.rs  print_handler.rs  query_cache.rs  query_captures.rs  query_match.rs  script_args_value_map.rs  scriptlet.rs  source.rs  stage.rs  store.rs  tree_walker.rs
src/scriptlets/snapshots/: vex__scriptlets__app_object__test__argument_kinds.snap  vex__scriptlets__app_object__test__warn_sorting.snap  vex__scriptlets__app_object__test__warn_valid.snap  vex__scriptlets__scriptlet__test__bad_search-3.snap  vex__scriptlets__scriptlet__test__bad_search.snap  vex__scriptlets__scriptlet__test__no_callbacks-2.snap  vex__scriptlets__scriptlet__test__no_callbacks-3.snap  vex__scriptlets__scriptlet__test__no_callbacks.snap  (+1 more)
src/snapshots/: vex__context__test__init_example.snap  vex__context__tests__init_example.snap  vex__test___readme.snap  vex__test__readme.snap
src/vex/: id.rs
tutorials/: index.html  lets-write-a-vex.html
