[package]
name = "vex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.10.0"
anyhow = "1.0.76"
async-recursion = "1.0.5"
camino = "1.1.6"
clap = { version = "4.4.11", features = ["derive"] }
enum-map = "2.7.3"
glob = "0.3.1"
indoc = "2.0.4"
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["sync", "fs", "rt-multi-thread", "macros"] }
toml_edit = { version = "0.21.0", features = ["serde"] }
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
