[package]
name = "vex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.1"
annotate-snippets = "0.10.0"
anyhow = "1.0.76"
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.11", features = ["derive", "color", "wrap_help"] }
const_format = "0.2.32"
derive-new = "0.6.0"
derive_more = "0.99.17"
dupe = "0.9.0"
enum-map = "2.7.3"
glob = "0.3.1"
indoc = "2.0.4"
joinery = "3.1.0"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std", "kv_unstable"] }
num-traits = "0.2.17"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
paste = "1.0.15"
regex = "1.10.3"
serde = { version = "1.0.193", features = ["derive", "rc"] }
smallvec = "1.13.2"
starlark = "0.12.0"
starlark_derive = "0.12.0"
strsim = "0.11.0"
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.9.0"
thiserror = "1.0.51"
toml_edit = { version = "0.21.0", features = ["serde"] }
tree-sitter = "0.21.0"
tree-sitter-c = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-cpp = "0.21"
uniquote = "4.0.0"

[dev-dependencies]
insta = { version = "1.36.1", features = ["yaml"] }
pretty_assertions = "1.4.0"
textwrap = { version = "0.16.1", default-features = false }

[profile.release]
lto = "fat"
strip = "symbols"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
